--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test"
@@ -41,15 +42,24 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
     "assert": "^2.0.0",
+    "babel-loader": "^8.2.5",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "html-webpack-plugin": "^5.5.0",
     "https-browserify": "^1.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
+    "source-map-explorer": "^2.5.3",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "ts-loader": "^9.4.1",
     "url": "^0.11.0"
   }
 }
