--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "rewire-test",
+  "name": "w5-test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-pdf/renderer": "^3.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -18,7 +17,6 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test"
@@ -42,24 +40,14 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-typescript": "^7.18.6",
-    "assert": "^2.0.0",
-    "babel-loader": "^8.2.5",
-    "buffer": "^6.0.3",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "crypto-browserify": "^3.12.0",
-    "html-webpack-plugin": "^5.5.0",
-    "https-browserify": "^1.0.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "os-browserify": "^0.3.0",
     "process": "^0.11.10",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "react-app-rewired": "^2.2.1",
-    "source-map-explorer": "^2.5.3",
     "speed-measure-webpack-plugin": "^1.5.0",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "ts-loader": "^9.4.1",
-    "url": "^0.11.0"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "util": "^0.12.5"
   }
 }
