--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-app-rewired": "^2.2.1",
     "speed-measure-webpack-plugin": "^1.5.0",
     "stream-browserify": "^3.0.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "util": "^0.12.5"
   }
